Fixed Services Section Paragraph Align

--- a/assets/style.css
+++ b/assets/style.css
@@ -194,7 +194,7 @@ nav .menu button {
     line-height: 30px;
     width: 80%;
     text-align: center;
-    margin-bottom: 50px;
+    margin: auto;
 }
 
 .services-cards {
